--- a/templates/login.html
+++ b/templates/login.html
@@ -23,6 +23,8 @@
   <div class="form-group">
     <button type="submit" class="btn btn-primary">Login</button>
   </div>
+  <br>
+      <a href="{% url 'administracao:createaccount'%}">Criar uma nova conta</a>
 </form>
 
 <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
