ajustes no segundo relatório, requirements.txt implementado, ajustes nos templates e configuração da api

--- a/templates/editaccount.html
+++ b/templates/editaccount.html
@@ -28,13 +28,8 @@
       <div class="collapse navbar-collapse" id="navbarsFurni">
         <ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
           <li class="nav-item active">
-            <a class="nav-link" href="index.html">Home</a>
+            <a class="nav-link" href="{% url 'administracao:home' %}">Home</a>
           </li>
-          <li><a class="nav-link" href="shop.html">Shop</a></li>
-          <li><a class="nav-link" href="about.html">About us</a></li>
-          <li><a class="nav-link" href="services.html">Services</a></li>
-          <li><a class="nav-link" href="blog.html">Blog</a></li>
-          <li><a class="nav-link" href="contact.html">Contact us</a></li>
         </ul>
         <ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
           {% if user.is_authenticated %}
@@ -45,6 +40,7 @@
             <button type="submit" class="btn-primary">Sair</button>
           </form>
         </ul>
+
       </div>
     </div>
   </nav>
