--- a/templates/login.html
+++ b/templates/login.html
@@ -25,6 +25,8 @@
   </div>
   <br>
       <a href="{% url 'administracao:createaccount'%}">Criar uma nova conta</a>
+  <br>
+      <a href="{% url 'administracao:reset_password'%}">Recuperar Senha</a>
 </form>
 
 <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
