--- a/apps/administracao/templates/administracao/reserva_form.html
+++ b/apps/administracao/templates/administracao/reserva_form.html
@@ -8,7 +8,6 @@
 * Template URI: https://untree.co/
 * License: https://creativecommons.org/licenses/by/3.0/
 */ -->
-<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -17,7 +16,7 @@
   <link rel="shortcut icon" href="favicon.png">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Project</title>
+    <title>Plataforma Pousada Praia Campeche</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"></script>
@@ -51,7 +50,6 @@
 		<link href="{% static 'css/style.css' %}" rel="stylesheet">
 	  <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.0/css/bootstrap.min.css" rel="stylesheet">
 
-		<title>Furni Free Bootstrap 5 Template for Furniture and Interior Design Websites by Untree.co </title>
 	</head>
 
 	<body>
@@ -60,7 +58,9 @@
 		<nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="Furni navigation bar">
 
 			<div class="container">
-				<a class="navbar-brand" href="index.html">Pousada Campeche<span>.</span></a>
+      <a class="navbar-brand" href="{% url 'administracao:home' %}">
+        <img src="{% static 'images/logo.png' %}">
+      </a>
 
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsFurni" aria-controls="navbarsFurni" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -68,29 +68,19 @@
 
 				<div class="collapse navbar-collapse" id="navbarsFurni">
 					<ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
-						<li class="nav-item ">
-							<a class="nav-link" href="index.html">Home</a>
-						</li>
-						<li class="active"><a class="nav-link" href="shop.html">Reservas</a></li>
-						<li><a class="nav-link" href="about.html">Sobre nós</a></li>
-						<li><a class="nav-link" href="services.html">Services</a></li>
-						<li><a class="nav-link" href="blog.html">Blog</a></li>
-						<li><a class="nav-link" href="contact.html">Contact us</a></li>
+						<li class="active"><a class="nav-link" href="{% url 'administracao:home' %}">Reservas</a></li>
+
 					</ul>
 
 					<ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
    						{% if user.is_authenticated %}
-						<li><a class="nav-link" href="{% url 'administracao:editaccount' user.pk %}"><img src="{% static 'images/user.svg' %}"></a></li>
+          				<li><a class="nav-link" href="{% url 'administracao:editaccount' user.pk %}"><img src="{% static 'images/user.svg' %}" style="width: 20px;"></a></li>
 						    {% endif %}
 
 					<form  method="post" class="nav-link" action="{% url 'administracao:logout' %}" >
 						{% csrf_token %}
-						<button type="submit" >
-							Sair
-						</button>
+						<button type="submit" class="btn-primary" >	Sair</button>
 					</form>
-
-
 
 					</ul>
 				</div>
@@ -98,55 +88,70 @@
 
 		</nav>
 
-		<!-- End Header/Navigation -->
 
-		<!-- Start Hero Section -->
-			<div class="hero">
-				<div class="container">
-					<div class="row justify-content-between">
-						<div class="col-lg-5">
-							<div class="intro-excerpt">
-								<h1>Apartamentos Disponíveis</h1>
+
+<!-- Start Hero Section -->
+<div class="hero">
+	<div class="container">
+		<div class="row justify-content-between align-items-center">
+			<div class="col-lg-5">
+				<div class="intro-excerpt">
+					<h1>Apartamentos Disponíveis</h1>
+				</div>
+			</div>
+			<div class="col-lg-7">
+				<!-- Seção do Carrossel de Imagens -->
+				<div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
+					<div class="carousel-inner">
+						{% for apartamento in apartamentos %}
+						{% if forloop.counter0|divisibleby:4 %}
+						<div class="carousel-item {% if forloop.first %}active{% endif %}">
+							<div class="row">
+								{% endif %}
+								<div class="col-md-3">
+									<img src="{{ apartamento.foto.url }}" alt="{{ apartamento.nome }}" class="apartamento-image">
+									<p class="apartamento-nome">{{ apartamento.nome }}</p>
+									<p class="apartamento-valor">{{ apartamento.valor }}</p>
+								</div>
+								{% if forloop.counter|divisibleby:4 or forloop.last %}
 							</div>
 						</div>
-						<div class="col-lg-7">
-
-						</div>
+						{% endif %}
+						{% endfor %}
 					</div>
-
+					<button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						<span class="visually-hidden">Previous</span>
+					</button>
+					<button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+						<span class="carousel-control-next-icon" aria-hidden="true"></span>
+						<span class="visually-hidden">Next</span>
+					</button>
 				</div>
-
-<div class="container">
-  <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      {% for apartamento in apartamentos %}
-        {% if forloop.counter0|divisibleby:4 %}
-          <div class="carousel-item {% if forloop.first %}active{% endif %}">
-            <div class="row">
-        {% endif %}
-              <div class="col-md-3">
-                <img src="{{ apartamento.foto.url }}" alt="{{ apartamento.nome }}" class="apartamento-image">
-                <p>{{ apartamento.nome }}</p>
-                <p>{{ apartamento.valor }}</p>
-              </div>
-        {% if forloop.counter|divisibleby:4 or forloop.last %}
-            </div>
-          </div>
-        {% endif %}
-      {% endfor %}
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
+				<!-- Fim do Carrossel de Imagens -->
+			</div>
+		</div>
+	</div>
 </div>
-
-
+<!-- Fim da Seção Hero -->
+<br>
+<!-- Seção de Cartões de Apartamentos -->
+<div class="container">
+	<div class="row">
+		{% for apartamento in apartamentos %}
+		<div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+			<div class="card bg-primary text-white">
+				<img src="{{ apartamento.foto.url }}" alt="{{ apartamento.nome }}" class="card-img-top apartamento-image">
+				<div class="card-body text-center">
+					<h5 class="card-title">{{ apartamento.nome }}</h5>
+					<p class="card-text">Valor: R$ {{ apartamento.valor }}</p>
+				</div>
+			</div>
+		</div>
+		{% endfor %}
+	</div>
+</div>
+<!-- Fim da Seção de Cartões de Apartamentos -->
 			</div>
 
 {% if messages %}
@@ -259,9 +264,46 @@
         background-color: #0056b3; /* Altere a cor de fundo do botão ao passar o mouse sobre ele */
     }
 </style>
-		<footer class="footer-section">
-			<div class="container relative">
 
+
+		<footer class="footer-section">
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-3">
+		<div class="card"><div class="card-body">
+      <h5>Previsão do Tempo para hoje em {{ weather_data.results.city_name }}</h5>
+      <p>Data: {{ weather_data.results.date }} | Hora: {{ weather_data.results.time }}</p>
+      <p>Temperatura: {{ weather_data.results.temp }}°C | Condição: {{ weather_data.results.description }}</p>
+      <p>Umidade: {{ weather_data.results.humidity }}</p>
+      <p>Vento: {{ weather_data.results.wind_speedy }}</p>
+      <img src="{{ condition_icon_url }}" alt="Ícone Condição Climática">
+	  <img src="{{ moon_phase_icon_url }}" alt="Ícone Fase da Lua">
+    </div>
+		</div>
+	</div>
+    <div class="col-md-9">
+      <h5>Previsão para os próximos dias:</h5>
+      <div class="row">
+        {% for forecast in weather_data.results.forecast|slice:":3" %}
+        <div class="col-md-4">
+          <div class="card">
+            <div class="card-body">
+              <h6>{{ forecast.date }} ({{ forecast.weekday }})</h6>
+              <p>Máx: {{ forecast.max }}°C | Mín: {{ forecast.min }}°C</p>
+              <p>Nuvens: {{ forecast.cloudiness }}% | Chuva: {{ forecast.rain }}mm</p>
+              <p>Prob. Chuva: {{ forecast.rain_probability }}% | Vento: {{ forecast.wind_speedy }}</p>
+              <p>Descrição: {{ forecast.description }}</p>
+            </div>
+          </div>
+        </div>
+        {% endfor %}
+      </div>
+    </div>
+  </div>
+</div>
+			<br>
+			<div class="container relative">
 
 				<div class="row g-5 mb-5">
 					<div class="col-lg-4">
@@ -333,3 +375,10 @@ $(document).ready(function () {
 </html>
 
 
+<style>
+  .apartamento-nome, .apartamento-valor {
+    font-size: 20px; /* Tamanho da fonte */
+    font-weight: bold; /* Negrito */
+    /* Outros estilos desejados */
+  }
+</style>
