--- a/templates/relatorio_cupons.html
+++ b/templates/relatorio_cupons.html
@@ -63,7 +63,7 @@
             <path class="wave" d="M0,96L48,122.7C96,149,192,203,288,192C384,181,480,107,576,90.7C672,75,768,117,864,133.3C960,149,1056,139,1152,128C1248,117,1344,107,1392,101.3L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path>
         </svg>
         <div class="row justify-content-center">
-            <h1 class="text-center mb-4">Relatório de Reservas</h1>
+            <h1 class="text-center mb-4">Relatório de Usuários</h1>
 
             <div class="col-md-6 horizontal-center form-container">
                 <form method="post">
