retirado código que não estavam sendo utilizados, termos do aceite

--- a/templates/createaccount.html
+++ b/templates/createaccount.html
@@ -87,6 +87,15 @@
                                 </div>
                             {% endfor %}
                         </div>
+                        <div class="mb-3">
+                            <label class="form-check-label">Termos e Condições:</label>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="termos" id="id_termos" required>
+                                <label class="form-check-label" for="id_termos">
+                                    Concordo com os <a href="/caminho/para/seu/documento.pdf" target="_blank">termos e condições</a>
+                                </label>
+                            </div>
+                        </div>
                     </fieldset>
                     <button type="submit" class="btn btn-primary">Criar Conta</button>
                 </form>
