alterado o titulo da pagina e removida as fotos desnecessárias

--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="favicon.png">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Project</title>
+    <title>Plataforma Pousada Praia Campeche</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"></script>
