--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -125,7 +125,7 @@
 
 					<!-- Start Column 3 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
-						<a class="product-item" href="cart.html">
+						<a class="product-item" href="{% url 'administracao:login' %}">
 							<img src="{% static 'images/casal2.png'%}" class="img-fluid product-thumbnail">
 
 							<h3 class="product-title">Apartamento 1 Dormitório</h3>
@@ -140,7 +140,7 @@
 
 					<!-- Start Column 4 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
-						<a class="product-item" href="cart.html">
+						<a class="product-item" href="{% url 'administracao:login' %}">
 							<img src="{% static 'images/salaofestas.png'%}" class="img-fluid product-thumbnail">
 							<h3 class="product-title">Salão de Festas</h3>
 
