--- a/templates/createaccount.html
+++ b/templates/createaccount.html
@@ -92,7 +92,7 @@
                             <div class="form-check">
                                 <input class="form-check-input" type="radio" name="termos" id="id_termos" required>
                                 <label class="form-check-label" for="id_termos">
-                                    Concordo com os <a href="/caminho/para/seu/documento.pdf" target="_blank">termos e condições</a>
+                                    Concordo com os <a href="https://drive.google.com/file/d/1Qhvbaa3ttG3orqceu2YgRiGesJLXLIIn/view?usp=sharing" target="_blank">termos e condições</a>
                                 </label>
                             </div>
                         </div>
