--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -292,8 +292,7 @@
 
 						<div class="col-lg-6 text-center text-lg-end">
 							<ul class="list-unstyled d-inline-flex ms-auto">
-								<li class="me-4"><a href="#">Terms &amp; Conditions</a></li>
-								<li><a href="#">Privacy Policy</a></li>
+								<li><a href="https://drive.google.com/file/d/1Qhvbaa3ttG3orqceu2YgRiGesJLXLIIn/view?usp=sharing">Política de privacidade</a></li>
 							</ul>
 						</div>
 
